fix text alignment on mobile farsi

--- a/wiki/src/donate-banner.css
+++ b/wiki/src/donate-banner.css
@@ -144,6 +144,9 @@ html[dir="rtl"] #donate-strip h2 {
         background-image: url(donate/donate_hand_usb_single.png);
         background-position: -35px bottom;
     }
+    html[dir="rtl"] #donate-strip * {
+        transform-origin: unset;
+    }
     .donate-l > strong {
         margin: 0 1% 0 25%;
         width: 74%;
